force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/XactlyExpress__XCCreditDealResult__c.object-meta.xml
<CustomObject>
    <label>XCCreditDealResult</label>
    <nameField>
        <label>XCCreditDealResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCCreditDealResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>