force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/fields/XactlyExpress__Credit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>