force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/fields/XactlyExpress__CreditSplitPercent__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditSplitPercent__c</fullName>
    <defaultValue>100</defaultValue>
    <label>CreditSplitPercent</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>