force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/fields/XactlyExpress__Currency10__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Currency10__c</fullName>
    <label>Currency10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>