force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/fields/XactlyExpress__DealID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DealID</label>
    <referenceTo>XactlyExpress__XCDeal__c</referenceTo>
    <relationshipLabel>XCCreditDealResult</relationshipLabel>
    <relationshipName>XCCreditDealResult</relationshipName>
    <type>Lookup</type>
</CustomField>