force-app/main/default/objects/XactlyExpress__XCCreditDealResult__c/fields/XactlyExpress__Number7__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Number7__c</fullName>
    <label>Number7</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>